--- a/README.mkd
+++ b/README.mkd
@@ -6,9 +6,9 @@ OnApp::API - Perlish interface to OnApp API
 
     use OnApp::API;
     my $vm = OnAPP::API->(
-           api\_email => $email,
-	 api\_key   => $key,
-	 api\_url   => $url,
+           api_email => $email,
+	 api_key   => $key,
+	 api_url   => $url,
     );
 
     my $hashOfVms = $vm->getVMs();
@@ -20,12 +20,12 @@ OnApp::API - Perlish interface to OnApp API
 Creates and returns an OnApp::API object. Expects authentication and endpoint details:
 
     my $vm = OnApp::API->new)
-          api\_email => "name@domain.com",
-          api\_key	  => "supersecretkey",
-          api\_url   => "url.of.the.onapp.box",
+          api_email => "name@domain.com",
+          api_key	  => "supersecretkey",
+          api_url   => "url.of.the.onapp.box",
     );
 
-You can, if you prefer, supply api\_email with an api\_username and api\_key with an api password.
+You can, if you prefer, supply api_email with an api_username and api_key with an api password.
 
 # METHODS
 
@@ -41,12 +41,12 @@ You may provide some criteria with which to filter the machines:
 
     my $vms = vm->getVMs(
             andFilter => {
-                    operating\_system => "linux",
-                    admin\_note       => "temporary"
+                    operating_system => "linux",
+                    admin_note       => "temporary"
             }
      )
 
-This is a ludicrously crude filter, currently. See the docs for \_applyFilter in the
+This is a ludicrously crude filter, currently. See the docs for _applyFilter in the
 private methods section.
 
 # PRIVATE METHODS
@@ -55,12 +55,12 @@ Don't use these.
 
 ## _applyFilter(), _applyAndFilter(), _applyOrFilter()
 
-\_applyFilter is passed three hashrefs:
+_applyFilter is passed three hashrefs:
 
     data:      some data to filter
     andFilter: a set of filtering criteria
 
-It calls \_applyAndFilter (and will, in the future, call \_applyOrFilter)
+It calls _applyAndFilter (and will, in the future, call _applyOrFilter)
 to do the filtering. Currently, it's a bit crude. The expectation is that
 `data` will be a hash of hashes. Each of its constituent hashes is kept if, 
 and only if, each of its keys mentioned in `andFilter` case-insensitively
@@ -68,24 +68,24 @@ matches the corresponding value in `andFilter`
 
 ## _getRef()
 
-Given a full URL (as returned by `\_getURL`, returns a hashref containing
+Given a full URL (as returned by `_getURL`, returns a hashref containing
 The data OnAPP returned.
 
 ## _getUrl()
 Used to create URLs from easy-to-remember names. For example, to get
 the correct URL for the API to return a list of users, you can do
 
-    \_getURL("get", "users");
+    _getURL("get", "users");
 
-These URLs are then passed to `\_getRef`.
+These URLs are then passed to `_getRef`.
 
 ## _getHash()
 
-Deprecated already. In favour of `\_getRef`. 'cause references are cool.
+Deprecated already. In favour of `_getRef`. 'cause references are cool.
 
 # SEE ALSO
 
-[http://cdn.onapp.com/files/docs/onapp\_cloud\_2-3\_api\_guide\_v1-3.pdf](http://cdn.onapp.com/files/docs/onapp\_cloud\_2-3\_api\_guide\_v1-3.pdf)
+[http://cdn.onapp.com/files/docs/onapp_cloud_2-3_api_guide_v1-3.pdf](http://cdn.onapp.com/files/docs/onapp_cloud_2-3_api_guide_v1-3.pdf)
 
 # COPYRIGHT
 
