--- a/README.mkd
+++ b/README.mkd
@@ -25,7 +25,7 @@ Creates and returns an OnApp::API object. Expects authentication and endpoint de
           api_url   => "url.of.the.onapp.box",
     );
 
-You can, if you prefer, supply api_email with an api_username and api_key with an api password.
+You can, if you prefer, supply `api_email` with a web UI username and `api_key` with a web UI password.
 
 # METHODS
 
@@ -35,28 +35,18 @@ You can, if you prefer, supply api_email with an api_username and api_key with a
 
 Returns a reference to a hash-of-hashes whose keys are the hostnames of the VMs:
 
-    my %vms = %{ $vm->getVMs };
+    my $vms = $vm->getVMs;
 
-You may provide some criteria with which to filter the machines:
+    $vms->{'hostname'}
 
-    my $vms = vm->getVMs(
-            andFilter => {
-                    operating_system => "linux",
-                    admin_note       => "temporary"
-            }
-     )
-
-This is a ludicrously crude filter, currently. See the docs for _applyFilter in the
-private methods section.
+### createVM();
 
 ## TEMPLATES
 
 ### getTemplates()
 
 Returns a hashref describing the templates. This is a hash-of-hashes, where the keys
-are the ID of the template described in the value.
-
-
+are the ID of the template described in the constituent hashes.
 
 # PRIVATE METHODS
 
@@ -64,28 +54,29 @@ Don't use these.
 
 ## _tidyData()
 
-Makes the data structure more sane. It comes out of the API as a hash of arrays, each 
-containing a single element which is a hash reference representing whatever we've asked
-for.
+Makes the data structure more sane. The API, when passed through `JSON::decode_json()`, 
+produces an array of hashrefs. Each of those hashes itself contains a single hashref
+describing the elements being returned.
 
-This rejigs it to be a hash of hashes. They key for the constituent hashes are the value
-of a property of what's being described. This name is given as the second parameter.
+This takes that structure and rearranges it into a single hash of hashrefs. The keys of
+the parent hash are the value of a single key from each of the constituent hashes, defined 
+by the scond parameter to `tidyData`:
 
-For example:
+    $ref $self->tidyData($ref, "hostname");
 
-    $self->_dityData($vmref, "hostname");
+will rearrange the $ref structure such that 
 
-Will rearrange the hash reference `$vmref` (which presumably contains hashes describing
-virtual machines) such that it's a hash-of-hashes where each element's keys are the 
-hostname of the machine described in the value.
+    keys(%{ $ref });
 
-
+will return a list of hostnames.
 
 ## _applyFilter(), _applyAndFilter(), _applyOrFilter()
 
+This is currently not used. It seems a bit pointless trying to provide a
+generic filter here when it might as well be done outside of the module
+in a more specific way, or by the API itself (which it isn't).
 
-
-_applyFilter is passed three hashrefs:
+_applyFilter is passed two hashrefs:
 
     data:      some data to filter
     andFilter: a set of filtering criteria
@@ -98,8 +89,12 @@ matches the corresponding value in `andFilter`
 
 ## _getRef()
 
-Given a full URL (as returned by `_getURL`, returns a hashref containing
-The data OnAPP returned.
+Given a full URL (as returned by `_getURL` ), returns a hashref containing
+The data.
+
+### _makeJson()
+
+Given a hashref, creates some JSON for passing to OnApp. Doesn't yet exist.
 
 ## _getUrl()
 Used to create URLs from easy-to-remember names. For example, to get
@@ -111,7 +106,7 @@ These URLs are then passed to `_getRef`.
 
 ## _getHash()
 
-Deprecated already. In favour of `_getRef`. 'cause references are cool.
+Deprecated already, in favour of `_getRef`. 'cause references are cool.
 
 # SEE ALSO
 
