--- a/README.mkd
+++ b/README.mkd
@@ -13,6 +13,32 @@ OnApp::API - Perlish interface to OnApp API
 
     my $hashOfVms = $vm->getVMs();
 
+    my $response = $vm->createVM(
+          cpus    => 1, 
+          cpu_shares => 2, 
+          Hostname => "avitest",
+          label => "avi testing",
+          primary_disk_size => 8, 
+          swap_disk_size => 1, 
+          rate_limit => 100,
+          admin_note => "do-wop",
+          Note => "doo-wop",
+          template_id => $templateID,
+    );
+
+
+
+Each of the `create` methods returns a hashref containing some useful data, but
+no real information. Keys are:
+
+- `status_code` => HTTP numerical status code
+- `status` => HTTP standard description for the HTTP status code
+- `status_description` => OnApp's explanation of the HTTP status code.
+- `requested_url` => The URL requested
+- `json` => The JSON sent
+- `response_objct` => The response object as returned by the `LWP::UserAgent` object 
+used to POST the data.
+
 # CONSTRUCTOR AND STARTUP
 
 ### new()
@@ -29,6 +55,40 @@ You can, if you prefer, supply `api_email` with a web UI username and `api_key` 
 
 # METHODS
 
+## Users
+
+### getUsers()
+
+Returns a reference to a hash-of-hashes whose keys are the usernames of the users:
+
+### createUser()
+
+Creates a user based on the hashref it's passed. 
+
+Mandatory fields:
+
+- `email` => user’s email address
+- `first_name` => user’s first name
+- `last_name` => user’s last name
+- `login` => login of the user. It can consist of 4-40 characters, letters [A-Za-z], digits [0-9], dash [ - ], lower dash [ _ ], [@]. You can use both lower- and uppercase letters
+- `password` => user’s password. (min – 6 characters)
+- `password_confirmation` => confirmation of the password (retype the password)
+
+If `password_confirmaton` is not passed, it is automatically set to the value of `password`. If it is 
+passed and is empty, it will be passed to OnApp as such and you'll probably get an error in return.
+
+Optional fields:
+
+- `role` => assigns a role to a user
+- `time_zone` => time zone of the user. Set by default
+- `locale` => local of the user. Set by default
+- `status` => user’s status (active, suspended, etc)
+- `billing_plan_id` => set by default, if not selected
+- `role_ids` => ID of the role, assigned to the user
+- `user_group_id` => ID of the group, to which the user is attached
+- `suspend_after_hours` => time in hours, after which the user will be suspended
+- `suspend_at` => time in [YYYY][MM][DD] T[hh][mm][ss]Z format, when the user will be suspended
+
 ## VMs
 
 ### getVMs()
@@ -41,6 +101,40 @@ Returns a reference to a hash-of-hashes whose keys are the hostnames of the VMs:
 
 ### createVM();
 
+Creates a virtual machine according to the parameters in the hashref passed as an argument. Items
+with asterisks are mandatory, wording below is essentially verbatim from the API docs.
+
+There's some stupid capitalisation going on in the docs - everything must be lower case.
+
+I've set three defaults:
+
+    required_automatic_backup => "0",
+    required_ip_address_assignment => "1",
+    required_virtual_machine_build => "1",
+
+Mandatory fields:
+
+- `cpus` => Number of CPUs assigned to the VM.
+- `cpu_shares` => Set CPU priority for this VM.
+- `hostname` => Set the host name for this VM.
+- `label` => User-friendly VM description.
+- `primary_disk_size` => Set the disk space for this VM. in GB.
+- `swap_disk_size` => Set swap space. There is no swap disk for Windows-based VMs.
+- `required_ip_address_assignment` => Set 1 if you wish the system to assign an IP automatically
+- `required_virtual_machine_build` => Set 1 to build VM automatically
+- `template_id` => The ID of a template from which a VM should be built
+
+Optional fields:
+
+- `primary_network_id` => The ID of the primary network. Optional parameter.
+- `required_automatic_backup` => Set 1 if you need automatic backups.
+- `rate_limit` => Set max port speed. Optional parameter: if none set, the system sets port speed to unlimited.
+- `admin_note` => Enter a brief comment for the VM. Optional parameter.
+- `note` => A brief comment a user can add to a VM.
+- `hypervisor_group_id` => The ID of the hypervisor zone in which the VM will be created. Optional: if no hypervisor zone is set, the VM will  be built in any available hypervisor zone.
+- `hypervisor_id` => The ID of a hypervisor where the VM will be built.
+- `initial_root_password` => Root password. [\w\-\_]{6,32} created if not supplied
+
 ## TEMPLATES
 
 ### getTemplates()
@@ -52,7 +146,7 @@ are the ID of the template described in the constituent hashes.
 
 Don't use these.
 
-## _tidyData()
+### _tidyData()
 
 Makes the data structure more sane. The API, when passed through `JSON::decode_json()`, 
 produces an array of hashrefs. Each of those hashes itself contains a single hashref
@@ -70,7 +164,7 @@ will rearrange the $ref structure such that
 
 will return a list of hostnames.
 
-## _applyFilter(), _applyAndFilter(), _applyOrFilter()
+### _applyFilter(), _applyAndFilter(), _applyOrFilter()
 
 This is currently not used. It seems a bit pointless trying to provide a
 generic filter here when it might as well be done outside of the module
@@ -87,24 +181,45 @@ to do the filtering. Currently, it's a bit crude. The expectation is that
 and only if, each of its keys mentioned in `andFilter` case-insensitively
 matches the corresponding value in `andFilter`
 
-## _getRef()
+### _getRef()
 
 Given a full URL (as returned by `_getURL` ), returns a hashref containing
 The data.
 
+### _postJson()
+
+    $self->_postJson( $hashref, $url, $containerName);
+
+Given a hashref, passes it to _makeJson to JSONify it and them POSTs it
+to the relevant API URL
+
+### _explainStatusCode
+
+    $self->_explainStatusCode($HTTPStatusCode);
+
+Given an HTTP status code, returns OnApp's explanation of why it would return it. Text is from
+the FAQ of the API guide:
+
+- 200 => "The request completed successfully",
+- 201 => "Scheduled The request has been accepted and scheduled for processing",
+- 403 => "Forbidden The request is correct, but could not be processed.",
+- 404 => "The requested URL is incorrect or the resource does not exist. For example, if you request to delete a user with ID {5}, but there is no such a user in the cloud, you will get a 404 error.",
+- 422 => "The sent parameters are erroneous.",
+- 500 => "An error occurred. Please contact support.",
+
 ### _makeJson()
 
-Given a hashref, creates some JSON for passing to OnApp. Doesn't yet exist.
+Given a hashref, creates some JSON for passing to OnApp.
 
-## _getUrl()
+### _getUrl()
 Used to create URLs from easy-to-remember names. For example, to get
 the correct URL for the API to return a list of users, you can do
 
-    _getURL("get", "users");
+    $self->_getURL("get", "users");
 
 These URLs are then passed to `_getRef`.
 
-## _getHash()
+### _getHash()
 
 Deprecated already, in favour of `_getRef`. 'cause references are cool.
 
